apps/scrypted/deployment.yaml
# Deployment for Scrypted
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrypted
  namespace: scrypted
  labels:
    app: scrypted
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrypted
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: macvlan-static
      labels:
        app: scrypted
    spec:
      containers:
      - name: scrypted
        image: ghcr.io/koush/scrypted
        ports:
          - name: https
            containerPort: 10443
            protocol: TCP
        volumeMounts:
          - name: nvr-volume
            mountPath: /nvr 
          - name: server-volume
            mountPath: /server/volume
      volumes:
      - name: server-volume
        persistentVolumeClaim:
          claimName: scrypted-server
      - name: nvr-volume
        persistentVolumeClaim:
          claimName: scrypted-nvr
