apps/scrypted/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted
spec:
  selector:
    app: scrypted
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
