apps/scrypted/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrypted-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: global-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"  
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: scrypted.${INGRESS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrypted
            port:
              number: 10443
  tls:
  - secretName: scrypted-tls
    hosts:
    - scrypted.${INGRESS_DOMAIN}
